pkg/k8s/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wjf
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: wjf
  template:
    metadata:
      labels:
        run: wjf
    spec:
      containers:
        - name: main
          image: nginx:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wjf
  namespace: default
spec:
  selector:
    run: wjf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wjf
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wjf
                port:
                  number: 80
